name:                reflex-http
version:             0.1
synopsis:            Binding client/server reflex bindings for web applications
-- description:         
homepage:            https://github.com/alios/reflex-http
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Reflex.HTTP
  -- other-modules:       
  -- other-extensions:    

  build-depends:       aeson >= 0.11,
                       base >=4.8 && <4.9,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       dependent-map >= 0.2,
                       http-types >= 0.9,
                       mtl >= 2.2,
                       reflex >=0.4 && <0.5,
                       text >=1.2 && <1.3,
                       wai >=3.2 && <3.3,
                       wai-extra >= 3.0,
                       wai-websockets >=3.0 && <3.1,
                       warp >= 3.2,
                       websockets >= 0.9
